# food_delivery_dispatcher

./: .gitignore  README.md  pyproject.toml  requirements.txt  sqlite.db
food_delivery_dispatcher/: dbutil.py  dispatcher.py  fleet.py  main.py  tables.py  util.py  worker.py
tests/: generate_test_drivers.py  generate_test_orders.py  test_dispatch.py
tests/data/: drivers.json  orders.json
