[tool.poetry]
name = "food_delivery_dispatcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "1.4.43"
jsql = "0.7"
jinja2 = "2.11.2"
MarkupSafe = "2.0.1"
pudb = "^2024.1.3"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  "."
]

